--- a/index.html
+++ b/index.html
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Portofolio Saya</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Header Tailwind</title>
 </head>
-<body>
-  <h1>Halo, Saya Rina</h1>
-  <p>Saya freelancer artikel & desain berbasis AI</p>
-  <h2>Layanan:</h2>
-  <ul>
-    <li>Artikel SEO</li>
-    <li>Desain Konten IG (Canva AI)</li>
-    <li>Gambar AI (Midjourney)</li>
-  </ul>
-  <h2>Kontak:</h2>
-  <p>Email: kamu@email.com</p>
+<body class="bg-gray-950">
+<!-- Hero Section -->
+<section id="home" class="text-white py-5 px-6">
+  <div class="max-w-4xl mx-auto text-center">
+    <h1 class="text-4xl md:text-5xl font-bold mb-4">
+      Hello, I'm Fadli - a
+    </h1>
+    <h4 class="text-4xl md:text-5xl font-bold mb-4">
+        Low-Level-System-Enginer | Web-Developer | Software-Developer
+    </h4>
+    <p class="text-gray-400 text-lg mb-8">
+      Passionate in <span class="text-blue-400 font-medium">C, Assembly, Linux Kernel</span> and building systems close to the hardware.
+    </p>
+
+    <!-- Tombol Interaktif -->
+    <div class="flex flex-col sm:flex-row gap-4 justify-center">
+      <a href="#projects" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-md font-semibold transition">
+          Home
+      </a>
+      <a href="#contact" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-md font-semibold transition">
+          My skill
+      </a>
+      <a href="#contact" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-md font-semibold transition">
+          Project
+      </a>
+      <a href="#contact" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-md font-semibold transition">
+          About
+      </a>
+    </div>
+  </div>
+</section>
+
+<footer class="bg-gray-900 text-gray-300 pt-10 pb-6 px-6">
+  <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8">
+
+    <!-- Tentang -->
+    <div>
+      <h3 class="text-lg font-bold text-white mb-3">👨‍💻 SysEng.Dev</h3>
+      <p class="text-sm text-gray-400">
+        System Engineer & Low-Level Developer.  
+        Fokus pada performa, keamanan, dan efisiensi perangkat lunak.
+      </p>
+    </div>
+
+    <!-- Sosial & Kontak -->
+    <div>
+      <h4 class="text-lg font-semibold text-white mb-3">Terhubung</h4>
+      <ul class="space-y-2 text-sm">
+        <li><a href="mailto:aulia@example.com" class="hover:text-blue-400 transition">📧 aulia@example.com</a></li>
+        <li><a href="https://github.com/username" target="_blank" class="hover:text-blue-400 transition">🐙 GitHub</a></li>
+        <li><a href="https://linkedin.com/in/username" target="_blank" class="hover:text-blue-400 transition">🔗 LinkedIn</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Garis & Copyright -->
+  <div class="mt-10 border-t border-gray-700 pt-4 text-center text-sm text-gray-500">
+    © 2025 Aulia Rahmawati – System Engineer. All rights reserved.
+  </div>
+</footer>
 </body>
 </html>
+
