menambahkan informasi git stats

--- a/index.html
+++ b/index.html
@@ -6,50 +6,44 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Header Tailwind</title>
 </head>
-<body class="bg-gray-950">
-<!-- Hero Section -->
-<section id="home" class="text-white py-5 px-6">
+<body class="bg-blue-900">
   <div class="max-w-4xl mx-auto text-center">
-    <h1 class="text-4xl md:text-5xl font-bold mb-4">
+  <div class="relative bg-gray-900/85 px-10 py-6 rounded-2xl shadow-[0_10px_30px_rgba(0,0,0,0.2)] transform transition-transform hover:-translate-y-2 hover:shadow-[0_20px_40px_rgba(0,0,0,0.3)] border border-gray-400">
+    <h1 class="text-white text-6xl md:text-5xl font-bold mb-4">
       Hello, I'm Fadli - a
     </h1>
-    <h4 class="text-4xl md:text-5xl font-bold mb-4">
+    <h4 class="text-gray-400 text-4xl md:text-5xl font-bold mb-4">
         Low-Level-System-Enginer | Web-Developer | Software-Developer
     </h4>
     <p class="text-gray-400 text-lg mb-8">
       Passionate in <span class="text-blue-400 font-medium">C, Assembly, Linux Kernel</span> and building systems close to the hardware.
     </p>
-
-    <!-- Tombol Interaktif -->
-    <div class="flex flex-col sm:flex-row gap-4 justify-center">
-      <a href="#projects" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-md font-semibold transition">
-          Home
-      </a>
-      <a href="#contact" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-md font-semibold transition">
-          My skill
-      </a>
-      <a href="#contact" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-md font-semibold transition">
-          Project
-      </a>
-      <a href="#contact" class="bg-gray-800 hover:bg-gray-700 text-white px-6 py-3 rounded-md font-semibold transition">
-          About
-      </a>
-    </div>
   </div>
-</section>
+  </div> 
+<!-- card Profile-->
+  <div class="py-7 max-w-4xl mx-auto text-center">
+  <div class="bg-gray-700 flex flex-col md:flex-row relative rounded-xl shadow-[0_10px_30px_rgba(0,0,0,0.2)] transform transition-transform hover:-translate-y-2 hover:shadow-[0_20px_40px_rgba(0,0,0,0.3)] border border-gray-400">
+
+  <div class="bg-blue-900 m-4 py-6 flex flex-col md:flex-row relative rounded-2xl shadow-[0_10px_30px_rgba(0,0,0,0.2)] transform transition-transform hover:-translate-y-2 hover:shadow-[0_20px_40px_rgba(0,0,0,0.3)] border border-gray-400">
+  <img class="object-cover py-6 px-7 rounded-full w-64 h-42 mx-auto"src="src/img/Profile1.jpg"/>
+    </div>
+
+  <img
+    src="https://github-readme-stats.vercel.app/api?username=xexobi&show_icons=true&theme=tokyonight"
+    alt="GitHub Stats"
+    class="rounded-2xl border border-gray-400 w-full h-full object-contain"
+  />
+
+  </div>
+  </div>
 
 <footer class="bg-gray-900 text-gray-300 pt-10 pb-6 px-6">
-  <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-8">
-
     <!-- Tentang -->
-    <div>
       <h3 class="text-lg font-bold text-white mb-3">👨‍💻 SysEng.Dev</h3>
       <p class="text-sm text-gray-400">
         System Engineer & Low-Level Developer.  
         Fokus pada performa, keamanan, dan efisiensi perangkat lunak.
       </p>
-    </div>
-
     <!-- Sosial & Kontak -->
     <div>
       <h4 class="text-lg font-semibold text-white mb-3">Terhubung</h4>
@@ -59,8 +53,6 @@
         <li><a href="https://linkedin.com/in/username" target="_blank" class="hover:text-blue-400 transition">🔗 LinkedIn</a></li>
       </ul>
     </div>
-
-  </div>
 
   <!-- Garis & Copyright -->
   <div class="mt-10 border-t border-gray-700 pt-4 text-center text-sm text-gray-500">
