menambahakn nama email

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   <div class="bg-blue-900 m-4 py-6 flex flex-col md:flex-row relative rounded-2xl shadow-[0_10px_30px_rgba(0,0,0,0.2)] transform transition-transform hover:-translate-y-2 hover:shadow-[0_20px_40px_rgba(0,0,0,0.3)] border border-gray-400">
   <img class="object-cover py-6 px-7 rounded-full w-64 h-42 mx-auto"src="src/img/Profile1.jpg"/>
     </div>
-
   <img
     src="https://github-readme-stats.vercel.app/api?username=xexobi&show_icons=true&theme=tokyonight"
     alt="GitHub Stats"
@@ -48,7 +47,7 @@
     <div>
       <h4 class="text-lg font-semibold text-white mb-3">Terhubung</h4>
       <ul class="space-y-2 text-sm">
-        <li><a href="mailto:aulia@example.com" class="hover:text-blue-400 transition">📧 aulia@example.com</a></li>
+        <li><a href="mailto:aulia@example.com" class="hover:text-blue-400 transition">📧 fadlidev99@gmail.com</a></li>
         <li><a href="https://github.com/username" target="_blank" class="hover:text-blue-400 transition">🐙 GitHub</a></li>
         <li><a href="https://linkedin.com/in/username" target="_blank" class="hover:text-blue-400 transition">🔗 LinkedIn</a></li>
       </ul>
