--- a/index.html
+++ b/index.html
@@ -1,126 +1,13 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <title>Header Tailwind</title>
-</head>
-<body class="bg-black">
-  <div class="relative bg-gray-900/85 px-10 py-6 shadow-[0_10px_30px_rgba(0,0,0,0.2)] transform transition-transform hover:-translate-y-2 hover:shadow-[0_20px_40px_rgba(0,0,0,0.3)]">
-    <h1 class="text-white text-6xl md:text-5xl font-bold mb-4">
-      Hello, I'm Fadli - a
-    </h1>
-  </div>
-<div class="flex space-x-6 py-6 px-6">
-<!-- card Profile-->
-  <!-- Konten di kiri -->
-  <div class="w-1/3 bg-gray-100 p-4 rounded-2xl">
-<div class="max-w-sm m-7 bg-white shadow-lg overflow-hidden border border-gray-700 rounded-2xl">
-  <!-- Bagian foto profile -->
-  <div class="flex justify-center mt-6">
-    <img class="w-64 h-64 rounded-full border-4 border-blue-500 shadow-md" src="src/img/Profile1.jpg" alt="Profile">
-  </div>
-  
-  <!-- Nama dan deskripsi -->
-  <div class="text-center px-6 py-4">
-    <h2 class="text-xl font-semibold text-gray-800">Nur Fadli</h2>
-    <p class="text-gray-500 text-sm">Web Developer | UI Designer</p>
-  </div>
-  
-  <!-- Sosial Media -->
-  <div class="flex justify-center gap-6 py-4 border-t">
-
-    <a href="#" class="text-blue-600 hover:text-blue-800 transition">Facebook
-    </a>
-    <a href="#" class="text-sky-500 hover:text-sky-700 transition">Instagram
-    </a>
-    <a href="#" class="text-gray-800 hover:text-black transition">Twiter
-    </a>
-
-  </div>
-</div>
-  </div>
-
-  <!-- Konten tree commit di kanan -->
-  <div class="w-2/3 px-20">
-<div class="max-w-sm px-10 bg-white shadow-lg overflow-hidden border border-gray-700 rounded-2xl">
-    <div class="ml-6 relative m-5">
-    <h1>My Project</h1>
-      <!-- Initial commit -->
-      <div class="relative pl-10 mb-6">
-        <div class="absolute left-0 top-0 w-4 h-4 rounded-full bg-green-500 border-2 border-gray-700"></div>
-        <div class="absolute left-1 top-4 w-0.5 h-full bg-gray-700"></div>
-        <span class="bg-gray-200 px-3 py-1 rounded">Initial commit</span>
-      </div>
-
-      <!-- Add README -->
-      <div class="relative pl-10 mb-6">
-        <div class="absolute left-0 top-0 w-4 h-4 rounded-full bg-green-500 border-2 border-gray-700"></div>
-        <div class="absolute left-1 top-4 w-0.5 h-full bg-gray-700"></div>
-        <span class="bg-gray-200 px-3 py-1 rounded">Add README</span>
-      </div>
-
-      <!-- Merge feature branch -->
-      <div class="relative pl-10 mb-6">
-        <div class="absolute left-0 top-0 w-4 h-4 rounded-full bg-green-500 border-2 border-gray-700"></div>
-        <div class="absolute left-1 top-4 w-0.5 h-full bg-gray-700"></div>
-        <span class="bg-gray-200 px-3 py-1 rounded">Merge feature branch</span>
-      </div>
-      <!-- Final commit -->
-      <div class="relative pl-10 mb-6">
-        <div class="absolute left-0 top-0 w-4 h-4 rounded-full bg-green-500 border-2 border-gray-700"></div>
-        <span class="bg-gray-200 px-3 py-1 rounded">Final commit</span>
-      </div>
-    </div>
-  </div>
-  <div class="bg-gray-900 text-green-400 font-mono p-4 rounded w-full max-w-xl">
-  <!-- Baris pertama prompt -->
-  <div class="flex">
-    <span class="mr-2">user@linux:~$</span>
-    <input type="text" placeholder="Type a command..." class="bg-transparent outline-none text-green-400 flex-1">
-  </div>
-
-  <!-- Output contoh -->
-  <div class="mt-2">
-    <div class="flex">
-      <span class="mr-2">user@linux:~$</span>
-      <span>ls -la</span>
-    </div>
-    <div class="ml-12 text-green-300">
-      <div>drwxr-xr-x  5 user user 4096 Aug 20 10:00 .</div>
-      <div>drwxr-xr-x  3 user user 4096 Aug 19 09:00 ..</div>
-      <div>-rw-r--r--  1 user user  123 Aug 20 09:50 file.txt</div>
-    </div>
-  </div>
-</div>
-
-</div>
-</div>
-
-
-<footer class="bg-gray-900 text-gray-300 pt-10 pb-6 px-6">
-    <!-- Tentang -->
-      <h3 class="text-lg font-bold text-white mb-3">👨‍💻 SysEng.Dev</h3>
-      <p class="text-sm text-gray-400">
-        System Engineer & Low-Level Developer.  
-        Fokus pada performa, keamanan, dan efisiensi perangkat lunak.
-      </p>
-    <!-- Sosial & Kontak -->
-    <div>
-      <h4 class="text-lg font-semibold text-white mb-3">Terhubung</h4>
-      <ul class="space-y-2 text-sm">
-        <li><a href="mailto:aulia@example.com" class="hover:text-blue-400 transition">📧 fadlidev99@gmail.com</a></li>
-        <li><a href="https://github.com/username" target="_blank" class="hover:text-blue-400 transition">🐙 GitHub</a></li>
-        <li><a href="https://linkedin.com/in/username" target="_blank" class="hover:text-blue-400 transition">🔗 LinkedIn</a></li>
-      </ul>
-    </div>
-
-  <!-- Garis & Copyright -->
-  <div class="mt-10 border-t border-gray-700 pt-4 text-center text-sm text-gray-500">
-    © 2025 Aulia Rahmawati – System Engineer. All rights reserved.
-  </div>
-</footer>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
-
